# Path_Planning_Test_Platform

./: .clang-format  .gitignore  A星规划器测试总结.md  CONTRIBUTING.md  README.md  testme.sh  verify_astar_integration.sh  verify_tests.sh
.github/: copilot-instructions.md
.github/workflows/: README.md
docs/: README.md
docs/api/: README.md  astar_planner.md
docs/development/: README.md
docs/testing/: README.md
docs/tutorials/: README.md  astar_planner_usage.md
src/nav2_astar_planner/: CMakeLists.txt  README.md  global_planner_plugin.xml  package.xml
src/nav2_astar_planner/include/nav2_astar_planner/: astar_planner.hpp
src/nav2_astar_planner/src/: astar_planner.cpp
src/nav2_astar_planner/test/: README.md  test_astar_integration.cpp  test_astar_planner.cpp  test_astar_planner_helper.hpp
src/nav2_rrt_star_connect_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/nav2_rrt_star_connect_planner/include/rrt_star_connect_planner/: rrt_star_connect_planner.hpp
src/nav2_rrt_star_connect_planner/src/: rrt_star_connect_planner.cpp
src/turtlebot3_gazebo/launch/: labyrinths.launch.py
src/turtlebot3_navigation2/launch/: navigation2.launch.py
src/turtlebot3_navigation2/map/: map.pgm  map.yaml
src/turtlebot3_navigation2/param/: waffle_pi.yaml
src/turtlebot3_navigation2/param/humble/: burger.yaml  burger_cam.yaml  waffle.yaml  waffle_pi.yaml
test/: CMakeLists.txt  test_astar_planner.cpp
